@@ -22,17 +22,70 @@ import hexdump
 import pubblock
 from utils import *
 
-# parse "Contents" part of the OLE container
-def parse(model,data,parent):
+pub98_types = {0x15:"Document",0x5:"Shape",0x14:"Page",0x28:"(pub2k3 0x4a)",
+	0x29:"Printers",0x47:"ColorSchemes"}
+
+
+# parse "Contents" part of the pub98/pub2k
+def parse98 (page,data,parent):
 	try:
+		tr_start = struct.unpack("<I",data[0x16:0x1a])[0]
+		add_pgiter (page,"Blocks A/B","pub",0,data[0x22:tr_start],parent)
 		blocks = {}
-		reorders = []
-		[hdrsize] = struct.unpack("<H",data[2:4])
+		n_blocks = struct.unpack("<H",data[tr_start:tr_start+2])[0]
+		tr_end = tr_start + n_blocks*10+2
+		tr_iter = add_pgiter (page,"Trailer","pub",0,data[tr_start:tr_end],parent)
+		block_c_end = struct.unpack("<I",data[tr_start+18:tr_start+22])[0]
+		add_pgiter (page,"Num of blocks (%02x)"%n_blocks,"pub",0,data[tr_start:tr_start+2],tr_iter)
+		doc_iter = add_pgiter (page,"Document Blocks","pub",0,data[block_c_end:],parent)
+		off = tr_start+2
+		for i in range(n_blocks):
+			fmt1 = ord(data[off+i*10])
+			fmt2 = ord(data[off+i*10+1])
+			blk_id = struct.unpack("<H",data[off+i*10+2:off+i*10+4])[0]
+			par_id = struct.unpack("<H",data[off+i*10+4:off+i*10+6])[0]
+			blk_offset = struct.unpack("<I",data[off+i*10+6:off+i*10+10])[0]
+			add_pgiter (page,"Ptr %02x\t[Fmt: %02x %02x ID: %02x Parent: %02x Offset: %02x]"%(i,fmt1,fmt2,blk_id,par_id,blk_offset),"pub",0,data[off+i*10:off+i*10+10],tr_iter)
+			blocks[blk_id] = [blk_offset,par_id]
+			if i > 0:
+				blocks[prev_id].append(blk_offset)
+			prev_id = blk_id
+
+		blocks[prev_id].append(len(data))
+		
+		p_iter = doc_iter
+		for i in blocks.keys():
+			start = blocks[i][0]
+			end = blocks[i][2]
+			par = blocks[i][1]
+			b_type = struct.unpack("<H",data[start:start+2])[0]
+			if pub98_types.has_key(b_type):
+				b_txt = pub98_types[b_type]
+			else:
+				b_txt = "%02x"%b_type
+			if par != 0xff:
+				p_iter = blocks[par][3]
+			blocks[i].append(add_pgiter (page,"Block %02x (%s)"%(i,b_txt),"pub98",b_type,data[start:end],p_iter))
+		
+	except:
+		print 'Failed in parsing pub98/2k "Contents"'
+
+
+# parse "Contents" part of the OLE container
+def parse(page,data,parent):
+	model = page.model
+	try:
+		hdrsize = struct.unpack("<H",data[2:4])[0]
 		iter1 = model.append(parent,None)
 		model.set_value(iter1,0,"Header")
 		model.set_value(iter1,1,0)
 		model.set_value(iter1,2,hdrsize)
 		model.set_value(iter1,3,data[0:hdrsize])
+		if hdrsize == 0x22:
+			parse98 (page,data,parent)
+			return
+		blocks = {}
+		reorders = []
 		off = hdrsize
 	# Parse the 1st block after header
 		[dlen] = struct.unpack('<I', data[off:off+4])
